Füge einen Bereich für temporäre Nachrichten hinzu und aktualisiere das Skript zur Anzeige von Erfolg- und Fehlermeldungen. Ergänze CSS-Stile für die Nachrichtenanzeige.

--- a/index.html
+++ b/index.html
@@ -77,5 +77,8 @@
         </main>
     </div>
     <script src="script.js"></script>
+
+    <!-- Bereich für temporäre Nachrichten -->
+    <div id="message-container"></div>
 </body>
 </html> 
